// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component large button matches snapshot 1`] = `
<WithStyles(ForwardRef(Button))
  color="primary"
  size="large"
  style={
    Object {
      "borderColor": "#B4DF4E",
      "color": "#B4DF4E",
      "fontSize": "1.5rem",
      "textTransform": "unset",
    }
  }
>
  Second button
</WithStyles(ForwardRef(Button))>
`;

exports[`Button component primary button matches snapshot 1`] = `
<WithStyles(ForwardRef(Button))
  color="primary"
  size="large"
  style={
    Object {
      "borderColor": "#B4DF4E",
      "color": "#B4DF4E",
      "fontSize": "1.5rem",
      "textTransform": "unset",
    }
  }
>
  primary button
</WithStyles(ForwardRef(Button))>
`;

exports[`Button component secondary button matches snapshot 1`] = `
<WithStyles(ForwardRef(Button))
  color="secondary"
  size="large"
  style={
    Object {
      "borderColor": "#B4DF4E",
      "color": "#B4DF4E",
      "fontSize": "1.5rem",
      "textTransform": "unset",
    }
  }
>
  Second button
</WithStyles(ForwardRef(Button))>
`;
